# test_CICD

./: pyproject.toml  pytest.ini  requirements.txt
.github/: workflows
.github/workflows/: python-app.yml
src/: main.py
test/: test_main.py
