[tool.poetry]
name = "test-cicd"
version = "0.1.0"
description = ""
authors = ["dima cheban <dimacheban23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.10"
pytest = "^8.3.4"
httpx = "^0.28.1"
flake8 = "^7.1.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"